# sudoku

./: Dockerfile  README.md  entrypoint.sh  openapi.json  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ruff.yml  test.yml
app/: __init__.py  main.py
app/api/errors/: __init__.py  http_error.py  validation_error.py
app/api/routes/: __init__.py  api.py  healthz.py  solve.py
app/core/: __init__.py  config.py
app/core/settings/: __init__.py  app.py  config.py
app/model/: __init__.py  board.py  schema.py  solver.py
app/model/schema/: __init__.py  board.py  response.py
app/service/: __init__.py  solve.py
sudoku/: __init__.py  solver.py
tests/: test_solve.py  test_solver.py
