[project]
name = "sudoku"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "a5chin" }
]
dependencies = [
    "pulp>=2.8.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "google-cloud-logging>=3.10.0",
    "fastapi>=0.111.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-gcp-trace>=1.6.0",
    "opentelemetry-propagator-gcp>=1.6.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "pre-commit>=3.7.0",
    "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
include = ["app"]
